feat: nome trocado para 'PaleoDex' para abrangir mais espécimes futuramente

--- a/alembic.ini
+++ b/alembic.ini
@@ -7,7 +7,7 @@ prepend_sys_path = .
 
 path_separator = os
 
-sqlalchemy.url = postgresql+asyncpg://dinodex:dinodex@localhost/dinodex
+sqlalchemy.url = postgresql+asyncpg://PaleoDex:PaleoDex@localhost/PaleoDex
 
 [post_write_hooks]LENAME
 
