--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Run",
             "type": "shell",
-            "command": "python -m uvicorn dinodex_api.main:app --reload",
+            "command": "python -m uvicorn paleodex_api.main:app --reload",
         }
     ]
 }
