fix: consertado o erro de autenticação

--- a/alembic.ini
+++ b/alembic.ini
@@ -7,7 +7,7 @@ prepend_sys_path = .
 
 path_separator = os
 
-sqlalchemy.url = postgresql+asyncpg://PaleoDex:PaleoDex@localhost/PaleoDex
+sqlalchemy.url = postgresql+asyncpg://paleodex:paleodex@localhost/paleodex
 
 [post_write_hooks]LENAME
 
